# parrot-reader

./: .gitignore  README.md  dev.ahmediqbal.parrot.json  meson.build  python3-modules.json
data/: dev.ahmediqbal.parrot.desktop.in  dev.ahmediqbal.parrot.gschema.xml  dev.ahmediqbal.parrot.metainfo.xml.in  dev.ahmediqbal.parrot.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: _config.py.in  loading-page.blp  loading_page.py  main.py  meson.build  parrot-reader.gresource.xml  parrot-reader.in  style.css  trim.py  tts-player.blp  tts.py  tts_player.py  voice-dialog.blp  voice_dialog.py  window.blp  window.py
